FIX : read all data mahasiswa
